samples/_failures_safe/1761259224_eda0f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_baf763d8.c: In function ‘main’:
./samples/SAFE/__tmp_baf763d8.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
